--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Mobile</span>
-                                <a href="tel:9759010719">+91 9759010719</a>
+                                <a dis href="javascript:void(0)">+91 * * * * * * * * * *</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -71,7 +71,7 @@
                         </div>
                         <div class="divider"></div>
                         <div class="download">
-                            <button type="button">
+                            <button type="button" onclick="DownloadResume()">
                                 <i class="fa fa-download"></i>
                                 <span>Download Resume</span>
                             </button>
