--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
                     </div>
                 </div>
             </div>
-            <div class="content" id="about-me" style="display: none;">
+            <div class="content" id="about-me">
                 <div class="box">
                     <div class="sticky"><h1 class="heading">About me</h1></div>
-                    <p>I am a UI/UX designer and Full Stack Web Developer excited at the prospect of meaning stack and developing web applications in a professional setting. Focused worker recognized by peers for my effective teamwork and language skills. Looking to apply my understanding of Database Development and Project Management in your organization. </p>
+                    <p>I am a UI/UX designer and Full Stack Web Developer excited at the prospect of meaning stack and developing web applications in a professional setting. Focused worker recognized by peers for my effective teamwork and language skills. Looking to apply my understanding of Database Development and Project Management in your organization.</p>
                 </div>
                 <div class="box">
                     <div class="sticky"><h1 class="heading">Education</h1></div>
                     <div class="education">
                         <div class="icon"></div>
                         <div class="details">
-                            <div class="title">Bachelor of computer science, From <a href="https://www.gehu.ac.in/" class="from" target="blank">Graphic era hill University.</a></div>
+                            <div class="title">Bachelor of computer science, From <a href="https://www.gehu.ac.in/" class="from" target="_blank">Graphic era hill University.</a></div>
                             <div class="date"><span class="from">2022</span> <span>-</span> <span class="to">Present</span></div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                     <div class="education">
                         <div class="icon"></div>
                         <div class="details">
-                            <div class="title">Intermediate , From <a href="https://ubse.uk.gov.in/" class="from" target="blank">UBSE.</a></div>
+                            <div class="title">Intermediate , From <a href="https://ubse.uk.gov.in/" class="from" target="_blank">UBSE.</a></div>
                             <div class="date"><span class="from">2021</span> <span>-</span> <span class="to">2023</span></div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                     <div class="education">
                         <div class="icon"></div>
                         <div class="details">
-                            <div class="title">High School , From <a href="https://ubse.uk.gov.in/" class="from" target="blank">UBSE.</a></div>
+                            <div class="title">High School , From <a href="https://ubse.uk.gov.in/" class="from" target="_blank">UBSE.</a></div>
                             <div class="date"><span class="from">2019</span> <span>-</span> <span class="to">2021</span></div>
                         </div>
                     </div>
@@ -167,30 +167,30 @@
                             <div class="list">
                                 <div class="lang">
                                     <span>html</span>
+                                    <span class="progress">95%</span>
+                                </div>
+                                <progress value="95" max="100"> 95% </progress>
+                            </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>css</span>
                                     <span class="progress">90%</span>
                                 </div>
                                 <progress value="90" max="100"> 90% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
-                                    <span>css</span>
-                                    <span class="progress">85%</span>
-                                </div>
-                                <progress value="85" max="100"> 85% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
                                     <span>javascript</span>
-                                    <span class="progress">65%</span>
+                                    <span class="progress">75%</span>
                                 </div>
-                                <progress value="65" max="100"> 65% </progress>
+                                <progress value="75" max="100"> 75% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
                                     <span>typescript</span>
-                                    <span class="progress" >75%</span>
+                                    <span class="progress" >80%</span>
                                 </div>
-                                <progress value="75" max="100"> 75% </progress>
+                                <progress value="80" max="100"> 80% </progress>
                             </div>
                         </div>
                         <div class="skill">
@@ -249,9 +249,9 @@
                             <div class="list">
                                 <div class="lang">
                                     <span>C</span>
-                                    <span class="progress">85%</span>
+                                    <span class="progress">90%</span>
                                 </div>
-                                <progress value="85" max="100"> 85% </progress>
+                                <progress value="90" max="100"> 90% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
@@ -271,15 +271,28 @@
                         <div class="primary">
                             <div class="card">
                                 <div class="img">
-                                    <img src="./images/project/restaurant.png" alt="project">
+                                    <img src="./images/project/sharechat.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/Sharechat')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
-                                    <p class="title">A restaurant Website</p>
-                                    <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
+                                    <p class="title">Sharechat</p>
+                                    <p class="used">Html, CSS, JavaScript, PHP, mySql</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="img">
+                                    <img src="./images/project/webzCloths.png" alt="project">
+                                    <div class="action">
+                                        <button type="button" class="code" title="view project" onclick="goto('http://webzcloths.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/webzCloths')"><i class="fa fa-code"></i></button>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <p class="title">webzCloths</p>
+                                    <p class="used">Html, CSS, JavaScript, PHP, mySql</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -293,19 +306,6 @@
                                 <div class="detail">
                                     <p class="title">YouTube Clone</p>
                                     <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="img">
-                                    <img src="./images/project/sharechat.png" alt="project">
-                                    <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/Sharechat')"><i class="fa fa-code"></i></button>
-                                    </div>
-                                </div>
-                                <div class="detail">
-                                    <p class="title">Sharechat</p>
-                                    <p class="used">Html, CSS, JavaScript, PHP, mySql</p>
                                 </div>
                             </div>
                             <div class="card">
