--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-in" class="dark">
+<html lang="en-in">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -305,7 +305,7 @@
                                 </div>
                                 <div class="detail">
                                     <p class="title">YouTube Clone</p>
-                                    <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
+                                    <p class="used">Html, CSS, JavaScript</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -327,11 +327,11 @@
                             <div class="list">
                                 <div class="item">
                                     <div class="icon">
-                                        <img src="./images/project/cloth.png" alt="error">
+                                        <img src="./images/project/other/restaurant.png" alt="error">
                                     </div>
                                     <div class="text">
-                                        <p class="title">E-commerce</p>
-                                        <p class="used">Html, Css, JS, PHP, MySql</p>
+                                        <p class="title">Silver Spoon</p>
+                                        <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
