--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                                 <div class="img">
                                     <img src="./images/project/Youtube.jpg" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://sameerbhandari512.github.io/youtube/')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/youtube')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
