--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                                 <div class="img">
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/AnasAli30/Notes_Hub.git')"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://sameerbhandari512.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/Notes-Solution')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
