--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 </div>
                                 <div class="detail">
                                     <p class="title">Notes Sharing Platform</p>
-                                    <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
+                                    <p class="used">Html, CSS, JavaScript, TypeScript</p>
                                 </div>
                             </div>
                         </div>
