--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
                             <div class="list">
                                 <div class="item">
                                     <div class="icon">
-                                        <img src="./images/project/other/restaurant.png" alt="error">
+                                        <img src="./images/project/other/love.png" alt="error">
                                     </div>
                                     <div class="text">
-                                        <p class="title">Silver Spoon</p>
-                                        <p class="used">Html, CSS, JavaScript, TypeScript, Node.js, Mongo DB</p>
+                                        <p class="title">Valentine</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-chevron-down"></i>
