--- a/index.html
+++ b/index.html
@@ -337,6 +337,18 @@
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
+                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/paint-app/')">
+                                    <div class="icon">
+                                        <img src="./images/project/other/paint.png" alt="error">
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">Paint app</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
