--- a/index.html
+++ b/index.html
@@ -325,6 +325,18 @@
                         <div class="secondary">
                             <h2 class="more">More Projects</h2>
                             <div class="list">
+                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/digital-signature/')">
+                                    <div class="icon">
+                                        <img src="./images/project/other/signature.png" alt="error">
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">DigiSign</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
                                 <div class="item">
                                     <div class="icon">
                                         <img src="./images/project/other/love.png" alt="error">
