--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Mobile</span>
-                                <a dis href="javascript:void(0)">+91 * * * * * * * * * *</a>
+                                <a dis href="javascript:void(0)">+91 9759010719</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -256,9 +256,9 @@
                             <div class="list">
                                 <div class="lang">
                                     <span>Python</span>
-                                    <span class="progress">10%</span>
+                                    <span class="progress">30%</span>
                                 </div>
-                                <progress value="10" max="100"> 10% </progress>
+                                <progress value="30" max="100"> 30% </progress>
                             </div>
                         </div>
                     </div>
