--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 </div>
                 <div class="contact">
                     <div class="social">
-                        <div class="box">
+<!--                         <div class="box">
                             <a href="https://www.facebook.com/sameerbhandari512" class="fa fa-facebook" target="blank"></a> 
-                        </div>
+                        </div> -->
                         <div class="box">
-                            <a href="https://www.instagram.com/sameerbhandari512" class="fa fa-instagram" target="blank"></a>
+                            <a href="https://www.instagram.com/dev_sameer_512" class="fa fa-instagram" target="blank"></a>
                         </div>
                         <div class="box">
                             <a href="https://github.com/sameerbhandari512" class="fa fa-github" target="blank"></a>
@@ -53,7 +53,7 @@
                             <a href="https://www.linkedin.com/in/sameerbhandari512" class="fa fa-linkedin" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://twitter.com/sambhandari512" class="fa fa-twitter" target="blank"></a>
+                            <a href="https://twitter.com/dev_sameer_512" class="fa fa-twitter" target="blank"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -63,7 +63,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Mobile</span>
-                                <a dis href="javascript:void(0)">+91 9759010719</a>
+                                <a dis href="javascript:void(0)">+91 * * * * * * * * *</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -331,18 +331,6 @@
                                     </div>
                                     <div class="text">
                                         <p class="title">DigiSign</p>
-                                        <p class="used">Html, CSS, JavaScript</p>
-                                    </div>
-                                    <div class="arrow">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="icon">
-                                        <img src="./images/project/other/love.png" alt="error">
-                                    </div>
-                                    <div class="text">
-                                        <p class="title">Valentine</p>
                                         <p class="used">Html, CSS, JavaScript</p>
                                     </div>
                                     <div class="arrow">
