New Profile photo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="profile-box">
             <div class="profile-img">
                 <div class="gradient">
-                    <img src="./images/profile/IMG_20231013_115837_437.jpg" alt="Sameer singh bhandari">
+                    <img src="./images/profile/-9vcerw.jpg" alt="Sameer singh bhandari">
                 </div>
             </div>
             <div class="profile">
