right click disable

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         </script>
 </head>
-<body onload="hideLoader()">
+<body  oncontextmenu="return false;" onload="hideLoader()">
     <div class="section-loader">
         <div class="loader">
             <div></div>
