--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 document.getElementById(activeTab()).style.display = 'block';
             }, 500)
         }
-        </script>
+    </script>
 </head>
 <body  oncontextmenu="return false;" onload="hideLoader()">
     <div class="section-loader">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="contact">
                     <div class="social">
-<!--                         <div class="box">
+                        <!-- <div class="box">
                             <a href="https://www.facebook.com/sameerbhandari512" class="fa fa-facebook" target="blank"></a> 
                         </div> -->
                         <div class="box">
@@ -325,6 +325,18 @@
                         <div class="secondary">
                             <h2 class="more">More Projects</h2>
                             <div class="list">
+                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/message/')">
+                                    <div class="icon">
+                                        <img src="./images/project/other/love-letter.png" alt="error">
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">Letter</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
                                 <div class="item" onclick="goto('https://sameerbhandari512.github.io/digital-signature/')">
                                     <div class="icon">
                                         <img src="./images/project/other/signature.png" alt="error">
