--- a/index.html
+++ b/index.html
@@ -200,6 +200,13 @@
                                 </div>
                                 <progress value="80" max="100"> 80% </progress>
                             </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>React Js</span>
+                                    <span class="progress" >60%</span>
+                                </div>
+                                <progress value="60" max="100"> 60% </progress>
+                            </div>
                         </div>
                         <div class="skill">
                             <h2 class="title">Backend</h2>
@@ -224,22 +231,46 @@
                                 </div>
                                 <progress value="70" max="100"> 70% </progress>
                             </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>Flask</span>
+                                    <span class="progress">70%</span>
+                                </div>
+                                <progress value="70" max="100"> 70% </progress>
+                            </div>
                         </div>
                         <div class="skill">
                             <h2 class="title">Database</h2>
                             <div class="list">
                                 <div class="lang">
-                                    <span>MySql</span>
+                                    <span>SQL</span>
                                     <span class="progress">85%</span>
                                 </div>
                                 <progress value="85" max="100"> 85% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
-                                    <span>MongoDb</span>
+                                    <span>BJSON</span>
                                     <span class="progress">75%</span>
                                 </div>
                                 <progress value="75" max="100"> 75% </progress>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h2 class="title">Programing</h2>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>C</span>
+                                    <span class="progress">80%</span>
+                                </div>
+                                <progress value="80" max="100"> 80% </progress>
+                            </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>Python</span>
+                                    <span class="progress">60%</span>
+                                </div>
+                                <progress value="60" max="100"> 60% </progress>
                             </div>
                         </div>
                         <div class="skill">
@@ -250,23 +281,6 @@
                                     <span class="progress">80%</span>
                                 </div>
                                 <progress value="80" max="100"> 80% </progress>
-                            </div>
-                        </div>
-                        <div class="skill">
-                            <h2 class="title">Programing</h2>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>C</span>
-                                    <span class="progress">90%</span>
-                                </div>
-                                <progress value="90" max="100"> 90% </progress>
-                            </div>
-                            <div class="list">
-                                <div class="lang">
-                                    <span>Python</span>
-                                    <span class="progress">30%</span>
-                                </div>
-                                <progress value="30" max="100"> 30% </progress>
                             </div>
                         </div>
                     </div>
