--- a/index.html
+++ b/index.html
@@ -243,17 +243,17 @@
                             <h2 class="title">Database</h2>
                             <div class="list">
                                 <div class="lang">
-                                    <span>SQL</span>
-                                    <span class="progress">85%</span>
+                                    <span>MySQL</span>
+                                    <span class="progress">70%</span>
                                 </div>
-                                <progress value="85" max="100"> 85% </progress>
+                                <progress value="70" max="100"> 70% </progress>
                             </div>
                             <div class="list">
                                 <div class="lang">
-                                    <span>BJSON</span>
-                                    <span class="progress">75%</span>
+                                    <span>MongoDB</span>
+                                    <span class="progress">60%</span>
                                 </div>
-                                <progress value="75" max="100"> 75% </progress>
+                                <progress value="60" max="100"> 60% </progress>
                             </div>
                         </div>
                         <div class="skill">
@@ -340,7 +340,7 @@
                                 </div>
                                 <div class="detail">
                                     <p class="title">Notes Sharing Platform</p>
-                                    <p class="used">Html, CSS, JavaScript, TypeScript</p>
+                                    <p class="used">Html, CSS, JavaScript</p>
                                 </div>
                             </div>
                         </div>
