--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
                         <div class="secondary">
                             <h2 class="more">More Projects</h2>
                             <div class="list">
+                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/scare.com/')">
+                                    <div class="icon">
+                                        <img src="./images/project/other/ghost.png" alt="error">
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">Scare.com</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
                                 <div class="item" onclick="goto('https://sameerbhandari512.github.io/message/')">
                                     <div class="icon">
                                         <img src="./images/project/other/love-letter.png" alt="error">
