--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
                                         <i class="fa fa-chevron-down"></i>
                                     </div>
                                 </div>
+                                <div class="divider"></div>
                                 <div class="item" onclick="goto('https://sameerbhandari512.github.io/message/')">
                                     <div class="icon">
                                         <img src="./images/project/other/love-letter.png" alt="error">
