sameerbhandari512 to xtrim.dev

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
                 <div class="contact">
                     <div class="social">
                         <div class="box">
-                            <a href="https://www.instagram.com/dev_sameer_512" class="fa fa-instagram" target="blank"></a>
+                            <a href="https://www.instagram.com/xtrim.dev" class="fa fa-instagram" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://github.com/sameerbhandari512" class="fa fa-github" target="blank"></a>
+                            <a href="https://github.com/xtrimDev" class="fa fa-github" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://www.linkedin.com/in/sameerbhandari512" class="fa fa-linkedin" target="blank"></a>
+                            <a href="https://www.linkedin.com/in/xtrimDev" class="fa fa-linkedin" target="blank"></a>
                         </div>
                         <div class="box">
-                            <a href="https://twitter.com/dev_sameer_512" class="fa fa-twitter" target="blank"></a>
+                            <a href="https://twitter.com/xtrim_dev" class="fa fa-twitter" target="blank"></a>
                         </div>
                     </div>
                     <div class="card">
@@ -61,7 +61,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Email</span>
-                                <a href="mailto:bhandarisameer512@gmail.com">bhandarisameer512@gmail.com</a>
+                                <a href="mailto:xtrim.dev@gmail.com">xtrim.dev@gmail.com</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -296,7 +296,7 @@
                                     <img src="./images/project/sharechat.png" alt="project">
                                     <div class="action">
                                         <button type="button" class="code" title="view project" onclick="goto('http://sharechat.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/Sharechat')"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Sharechat')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
@@ -309,7 +309,7 @@
                                     <img src="./images/project/webzCloths.png" alt="project">
                                     <div class="action">
                                         <button type="button" class="code" title="view project" onclick="goto('http://webzcloths.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/webzCloths')"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/webzCloths')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
@@ -321,8 +321,8 @@
                                 <div class="img">
                                     <img src="./images/project/Youtube.jpg" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://sameerbhandari512.github.io/youtube/')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/youtube')"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimDev.github.io/youtube/')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/youtube')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
@@ -334,8 +334,8 @@
                                 <div class="img">
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://sameerbhandari512.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/sameerbhandari512/Notes-Solution')"><i class="fa fa-code"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimDev.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Notes-Solution')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
@@ -347,7 +347,7 @@
                         <div class="secondary">
                             <h2 class="more">More Projects</h2>
                             <div class="list">
-                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/scare.com/')">
+                                <div class="item" onclick="goto('https://xtrimDev.github.io/scare.com/')">
                                     <div class="icon">
                                         <img src="./images/project/other/ghost.png" alt="error">
                                     </div>
@@ -360,7 +360,7 @@
                                     </div>
                                 </div>
                                 <div class="divider"></div>
-                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/message/')">
+                                <div class="item" onclick="goto('https://xtrimDev.github.io/message/')">
                                     <div class="icon">
                                         <img src="./images/project/other/love-letter.png" alt="error">
                                     </div>
@@ -373,7 +373,7 @@
                                     </div>
                                 </div>
                                 <div class="divider"></div>
-                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/digital-signature/')">
+                                <div class="item" onclick="goto('https://xtrimDev.github.io/digital-signature/')">
                                     <div class="icon">
                                         <img src="./images/project/other/signature.png" alt="error">
                                     </div>
@@ -386,7 +386,7 @@
                                     </div>
                                 </div>
                                 <div class="divider"></div>
-                                <div class="item" onclick="goto('https://sameerbhandari512.github.io/paint-app/')">
+                                <div class="item" onclick="goto('https://xtrimDev.github.io/paint-app/')">
                                     <div class="icon">
                                         <img src="./images/project/other/paint.png" alt="error">
                                     </div>
