Profile photo change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="profile-box">
             <div class="profile-img">
                 <div class="gradient">
-                    <img src="./images/profile/-9vcerw.jpg" alt="Sameer singh bhandari">
+                    <img src="./images/profile/profile-pic.png" alt="Sameer singh bhandari">
                 </div>
             </div>
             <div class="profile">
