--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </div>
                             <div class="data">
                                 <span class="heading">Mobile</span>
-                                <a href="javascript:void(0)">+91 * * * * * * * * *</a>
+                                <a href="tel:9759010719">+91 9759010719</a>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -137,14 +137,14 @@
             <div class="content" id="about-me">
                 <div class="box">
                     <div class="sticky"><h1 class="heading">About me</h1></div>
-                    <p>I am a UI/UX designer and Full Stack Web Developer excited at the prospect of meaning stack and developing web applications in a professional setting. Focused worker recognized by peers for my effective teamwork and language skills. Looking to apply my understanding of Database Development and Project Management in your organization.</p>
+                    <p class="indentation">As a Full Stack Web Developer skilled in MERN, PHP, MySQL, and Python, I create dynamic, scalable web applications with a focus on seamless user experiences. Currently, I’m expanding my expertise into <b>Web3</b> and <b>blockchain</b> technology. My commitment to agile methodologies and continuous learning drives my passion for delivering innovative solutions. Let’s collaborate to bring your digital ideas to life!</p>
                 </div>
                 <div class="box">
                     <div class="sticky"><h1 class="heading">Education</h1></div>
                     <div class="education">
                         <div class="icon"></div>
                         <div class="details">
-                            <div class="title">Bachelor of computer science, From <a href="https://www.gehu.ac.in/" class="from" target="_blank">Graphic era hill University.</a></div>
+                            <div class="title">Bachelor of technology in computer science, From <a href="https://www.gehu.ac.in/" class="from" target="_blank">Graphic era hill University.</a></div>
                             <div class="date"><span class="from">2023</span><span class="to">Present</span></div>
                         </div>
                     </div>
@@ -162,6 +162,14 @@
                         <div class="details">
                             <div class="title">High School , From <a href="https://ubse.uk.gov.in/" class="from" target="_blank">UBSE.</a></div>
                             <div class="date"><span class="from">2019</span><span class="to">2021</span></div>
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="education">
+                        <div class="icon"></div>
+                        <div class="details">
+                            <div class="title">Advanced diploma in computer applications, From <a href="https://www.emaxindia.in/" class="from" target="_blank">Education Maximum.</a></div>
+                            <div class="date"><span class="from">2018</span><span class="to">2019</span></div>
                         </div>
                     </div>
                 </div>
@@ -272,6 +280,13 @@
                                 </div>
                                 <progress value="60" max="100"> 60% </progress>
                             </div>
+                            <div class="list">
+                                <div class="lang">
+                                    <span>C++</span>
+                                    <span class="progress">50%</span>
+                                </div>
+                                <progress value="50" max="100"> 50% </progress>
+                            </div>
                         </div>
                         <div class="skill">
                             <h2 class="title">Devops</h2>
@@ -301,40 +316,40 @@
                                 </div>
                                 <div class="detail">
                                     <p class="title">Sharechat</p>
-                                    <p class="used">Html, CSS, JavaScript, PHP, mySql</p>
+                                    <p class="used">Html, CSS, JavaScript, PHP and mySql</p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/webzCloths.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('http://webzcloths.000.pe/?referral=true')"><i class="fa fa-eye"></i></button>
+                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa fa-eye"></i></button> -->
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/webzCloths')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
                                     <p class="title">webzCloths</p>
-                                    <p class="used">Html, CSS, JavaScript, PHP, mySql</p>
+                                    <p class="used">Html, CSS, JavaScript, PHP and mySql</p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/Youtube.jpg" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimDev.github.io/youtube/')"><i class="fa fa-eye"></i></button>
-                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/youtube')"><i class="fa fa-code"></i></button>
+                                        <!-- <button type="button" class="code" title="view project" onclick="goto('')"><i class="fa fa-eye"></i></button> -->
+                                        <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/yt.clone.react')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
                                 <div class="detail">
                                     <p class="title">YouTube Clone</p>
-                                    <p class="used">Html, CSS, JavaScript</p>
+                                    <p class="used">Html, CSS, JavaScript and React js</p>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="img">
                                     <img src="./images/project/Notes.png" alt="project">
                                     <div class="action">
-                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimDev.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
+                                        <button type="button" class="code" title="view project" onclick="goto('https://xtrimdev.github.io/Notes-Solution/')"><i class="fa fa-eye"></i></button>
                                         <button type="button" class="code" title="view code" onclick="goto('https://github.com/xtrimDev/Notes-Solution')"><i class="fa fa-code"></i></button>
                                     </div>
                                 </div>
@@ -347,32 +362,6 @@
                         <div class="secondary">
                             <h2 class="more">More Projects</h2>
                             <div class="list">
-                                <div class="item" onclick="goto('https://xtrimDev.github.io/scare.com/')">
-                                    <div class="icon">
-                                        <img src="./images/project/other/ghost.png" alt="error">
-                                    </div>
-                                    <div class="text">
-                                        <p class="title">Scare.com</p>
-                                        <p class="used">Html, CSS, JavaScript</p>
-                                    </div>
-                                    <div class="arrow">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                                <div class="divider"></div>
-                                <div class="item" onclick="goto('https://xtrimDev.github.io/message/')">
-                                    <div class="icon">
-                                        <img src="./images/project/other/love-letter.png" alt="error">
-                                    </div>
-                                    <div class="text">
-                                        <p class="title">Letter</p>
-                                        <p class="used">Html, CSS, JavaScript</p>
-                                    </div>
-                                    <div class="arrow">
-                                        <i class="fa fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                                <div class="divider"></div>
                                 <div class="item" onclick="goto('https://xtrimDev.github.io/digital-signature/')">
                                     <div class="icon">
                                         <img src="./images/project/other/signature.png" alt="error">
@@ -392,6 +381,19 @@
                                     </div>
                                     <div class="text">
                                         <p class="title">Paint app</p>
+                                        <p class="used">Html, CSS, JavaScript</p>
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </div>
+                                </div>
+                                <div class="divider"></div>
+                                <div class="item" onclick="goto('https://xtrimDev.github.io/scare.com/')">
+                                    <div class="icon">
+                                        <img src="./images/project/other/ghost.png" alt="error">
+                                    </div>
+                                    <div class="text">
+                                        <p class="title">Scare.com</p>
                                         <p class="used">Html, CSS, JavaScript</p>
                                     </div>
                                     <div class="arrow">
