--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <div class="box">
                             <a href="https://twitter.com/xtrim_dev" class="fa fa-twitter" target="blank"></a>
                         </div>
+                        <div class="box">
+                            <a href="https://t.me/xtrimDev" class="fa fa-telegram" target="blank"></a>
+                        </div>
                     </div>
                     <div class="card">
                         <div class="detail">
